--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -381,6 +381,12 @@ $screen-xs-max:              ($screen-sm-min - 1) !default; // 767px
 $screen-sm-max:              ($screen-md-min - 1) !default; // 991px
 $screen-md-max:              ($screen-lg-min - 1) !default; // 1199px
 
+// Bootstrap4 breakpoints
+$breakpoint-xm: 540px;
+$breakpoint-sm: 720px;
+$breakpoint-md: 960px;
+$breakpoint-lg: 1200px;
+
 
 
 //== Grid system
