--- a/source/scss/cagov/nav-mobile-controls.scss
+++ b/source/scss/cagov/nav-mobile-controls.scss
@@ -16,6 +16,7 @@
 	top: 0;
 	width: 100%;
     height:100%;
+    min-height:80px;
 	padding-right: 0;	// IOS fix 5.0 addition
 	@include container;
     
@@ -54,25 +55,25 @@
 // INDIVIDUAL CONTROLS
 .mobile-control {
     &.toggle-sub-nav { // Dynamic element $toggleSubNav placed before each .sub-nav element
-		position:absolute;
-		top: 0;
-		right: 0;
+        position: absolute;
+        top: 0;
+        right: 0;
         @include font-size(1.5);
-        width:80px;
-        text-align:center;
+        width: 80px;
+        text-align: center;
         cursor: pointer;
-		padding-left: 7px;
-		border:none;
-		line-height:53px;
-		
-		&:active {
-			.rotate { // preventing icon shifting on active state inn IE and FF
-				position:relative;
-				top: 0; 
-				left: 0;
-				}
-			}
-	}
+        padding-left: 7px;
+        border: none;
+        height: 100%;
+
+        &:active {
+            .rotate { // preventing icon shifting on active state in IE and FF
+                position: absolute;
+                top: 20px;
+                left: 30px;
+            }
+        }
+    }
 }
 
 // IOS Icons FIX
@@ -161,14 +162,18 @@
   
 }
 
-	  .rotate {
+.rotate {
     -moz-transition: all .2s ease !important;
     -webkit-transition: all .2s ease !important;
     transition: all .2s ease !important;
+    position: absolute;
+    top: 20px;
+    left: 30px;
 
-		&.down {
-			-moz-transform:rotate(90deg) !important;
-			-webkit-transform:rotate(90deg) !important;
-			transform:rotate(90deg) !important;
-		}
-	}
+
+    &.down {
+        -moz-transform: rotate(90deg) !important;
+        -webkit-transform: rotate(90deg) !important;
+        transform: rotate(90deg) !important;
+    }
+}
