Updated gulpfile.js Added “dev” (not-minified compilation) and “prod” (minified compilation), included all color scheme compilation commands.

--- a/source/scss/cagov.core.scss
+++ b/source/scss/cagov.core.scss
@@ -72,10 +72,19 @@
 
 
 //
-// CALTECH CORE
+//  CAGOV CORE
 // --------------------------------------------------
+// Pull in specific colorscheme variables
 
-@import "colorscheme/colorscheme.scss";  // Pull in specific colorscheme variables chosen in colorscheme.scss file
+//@import "colorscheme/colorscheme-eureka.scss";
+//@import "colorscheme/colorscheme-mono.scss";
+@import "colorscheme/colorscheme-oceanside.scss";
+//@import "colorscheme/colorscheme-orangecounty.scss";
+//@import "colorscheme/colorscheme-pasorobles.scss";
+//@import "colorscheme/colorscheme-sacramento.scss";
+//@import "colorscheme/colorscheme-santabarbara.scss";
+//@import "colorscheme/colorscheme-sierra.scss";
+//@import "colorscheme/colorscheme-trinity.scss"; 
 
 @import "cagov/reset.scss";
 @import "cagov/mixins.scss";
