--- a/source/scss/colorscheme/colorscheme-trinity-import.scss
+++ b/source/scss/colorscheme/colorscheme-trinity-import.scss
@@ -1,9 +1,14 @@
 // ----------------------------------------
-//   COLORSCHEME MASTER
+//   COLOR SCHEME TRINITY IMPORT
 //-----------------------------------------
 
-// Get the colorscheme variables first
-@import "colorscheme.scss"; // loading selected colorscheme variables from colorscheme.scss into the colorscheme master 
+@import "../bootstrap/functions";
+@import "../bootstrap/variables";
+@import "../bootstrap/mixins";
+@import "../variables.scss";
+@import "../cagov/mixins.scss";
+
+@import "colorscheme-trinity.scss";
 
 @import "cs-layout.scss";
 @import "cs-global-header.scss";
@@ -26,4 +31,4 @@
 @import "cs-buttons.scss";
 @import "cs-blocks.scss";
 
-@import "cs-high-contrast.scss";       // File should always be last
+@import "cs-high-contrast.scss"; // File should always be last
