Updated ful width navigation logo version number, Updated links underline style mixing

--- a/css/colorscheme-mono.css
+++ b/css/colorscheme-mono.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.1 -  12/31/2018 
+ * CA State Template v5.5 -  @version v5.5.1 -  1/3/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    MONO
@@ -382,16 +382,16 @@ figure {
 }
 
 .section-overstated a:not(.btn), .card-overstated a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-overstated a:not(.btn):hover, .card-overstated a:not(.btn):hover {
-  background-image: linear-gradient(#F4F3EF, #F4F3EF);
+  background-image: linear-gradient(to right, #F4F3EF 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -469,16 +469,16 @@ figure {
 }
 
 .section-standout a:not(.btn), .card-standout a:not(.btn) {
-  background-image: linear-gradient(#b3b2ac, #b3b2ac);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #b3b2ac 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-standout a:not(.btn):hover, .card-standout a:not(.btn):hover {
-  background-image: linear-gradient(#b1b1a4, #b1b1a4);
+  background-image: linear-gradient(to right, #b1b1a4 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -564,16 +564,16 @@ figure {
 }
 
 .section-impact a:not(.btn), .card-impact a:not(.btn) {
-  background-image: linear-gradient(#b3b2ac, #b3b2ac);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #b3b2ac 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-impact a:not(.btn):hover, .card-impact a:not(.btn):hover {
-  background-image: linear-gradient(#b1b1a4, #b1b1a4);
+  background-image: linear-gradient(to right, #b1b1a4 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -691,16 +691,16 @@ figure {
 }
 
 .section-primary a:not(.btn), .card-primary a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-primary a:not(.btn):hover, .card-primary a:not(.btn):hover {
-  background-image: linear-gradient(#F4F3EF, #F4F3EF);
+  background-image: linear-gradient(to right, #F4F3EF 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -778,16 +778,16 @@ figure {
 }
 
 .section-inverted a:not(.btn), .card-inverted a:not(.btn) {
-  background-image: linear-gradient(#b3b2ac, #b3b2ac);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #b3b2ac 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-inverted a:not(.btn):hover, .card-inverted a:not(.btn):hover {
-  background-image: linear-gradient(#a2a199, #a2a199);
+  background-image: linear-gradient(to right, #a2a199 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -865,16 +865,16 @@ figure {
 }
 
 .section-danger a:not(.btn), .card-danger a:not(.btn) {
-  background-image: linear-gradient(#000, #000);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-danger a:not(.btn):hover, .card-danger a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -895,16 +895,16 @@ figure {
 }
 
 .bg-highlight a:not(.btn) {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .bg-highlight a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -929,16 +929,16 @@ figure {
 }
 
 .bg-primary a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .bg-primary a:not(.btn):hover {
-  background-image: linear-gradient(#F4F3EF, #F4F3EF);
+  background-image: linear-gradient(to right, #F4F3EF 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -963,32 +963,32 @@ figure {
 }
 
 .bg-standout a:not(.btn) {
-  background-image: linear-gradient(#b3b2ac, #b3b2ac);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #b3b2ac 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .bg-standout a:not(.btn):hover {
-  background-image: linear-gradient(#b1b1a4, #b1b1a4);
+  background-image: linear-gradient(to right, #b1b1a4 50%, transparent 50%);
   text-decoration: none !important;
 }
 
 a.text-white:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 a.text-white:not(.btn):hover {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
@@ -1205,16 +1205,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-overstated a:not(.btn) {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-overstated a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1244,16 +1244,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-standout a:not(.btn) {
-  background-image: linear-gradient(#ffce2b, #ffce2b);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #ffce2b 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-standout a:not(.btn):hover {
-  background-image: linear-gradient(#fff, #fff);
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1283,16 +1283,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-primary a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-primary a:not(.btn):hover {
-  background-image: linear-gradient(#F4F3EF, #F4F3EF);
+  background-image: linear-gradient(to right, #F4F3EF 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1322,16 +1322,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-highlight a:not(.btn) {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-highlight a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1361,16 +1361,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-inverted a:not(.btn) {
-  background-image: linear-gradient(#ffce2b, #ffce2b);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #ffce2b 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-inverted a:not(.btn):hover {
-  background-image: linear-gradient(#fff, #fff);
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1400,16 +1400,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-danger a:not(.btn) {
-  background-image: linear-gradient(#000, #000);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-danger a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1444,16 +1444,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-primary a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-primary a:not(.btn):hover {
-  background-image: linear-gradient(#F4F3EF, #F4F3EF);
+  background-image: linear-gradient(to right, #F4F3EF 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1490,16 +1490,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-inverted a:not(.btn), .card-inverse a:not(.btn) {
-  background-image: linear-gradient(#b3b2ac, #b3b2ac);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #b3b2ac 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-inverted a:not(.btn):hover, .card-inverse a:not(.btn):hover {
-  background-image: linear-gradient(#a2a199, #a2a199);
+  background-image: linear-gradient(to right, #a2a199 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1536,16 +1536,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-success a:not(.btn) {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-success a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1582,16 +1582,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-info a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-info a:not(.btn):hover {
-  background-image: linear-gradient(#fff, #fff);
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1628,16 +1628,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-warning a:not(.btn) {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-warning a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1674,16 +1674,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-danger a:not(.btn) {
-  background-image: linear-gradient(#000, #000);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-danger a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1885,16 +1885,16 @@ a.text-white:not(.btn):hover {
 }
 
 .panel-overstated .panel-body a:not(.btn), .panel-overstated .card-body a:not(.btn), .card-overstated .panel-body a:not(.btn), .card-overstated .card-body a:not(.btn) {
-  background-image: linear-gradient(#046B99, #046B99);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #046B99 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .panel-overstated .panel-body a:not(.btn):hover, .panel-overstated .card-body a:not(.btn):hover, .card-overstated .panel-body a:not(.btn):hover, .card-overstated .card-body a:not(.btn):hover {
-  background-image: linear-gradient(#02374e, #02374e);
+  background-image: linear-gradient(to right, #02374e 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -2079,16 +2079,16 @@ a.text-white:not(.btn):hover {
 }
 
 .panel-standout .panel-body a:not(.btn), .panel-standout .card-body a:not(.btn), .card-standout .panel-body a:not(.btn), .card-standout .card-body a:not(.btn) {
-  background-image: linear-gradient(#046B99, #046B99);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #046B99 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .panel-standout .panel-body a:not(.btn):hover, .panel-standout .card-body a:not(.btn):hover, .card-standout .panel-body a:not(.btn):hover, .card-standout .card-body a:not(.btn):hover {
-  background-image: linear-gradient(#02374e, #02374e);
+  background-image: linear-gradient(to right, #02374e 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -2571,18 +2571,18 @@ input[type="radio"]:checked + * i {
 }
 
 .main-content a.color-gray-dark {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .main-content a.color-primary-hover:hover {
-  background-image: linear-gradient(#545351, #545351);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #545351 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
