- Made search nav link in the main navigation scroll to search container on click/touch in mobile - Updated main content links underline styles

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.4 -  12/27/2018 
+ * CA State Template v5 -  @version v5.0.4 -  1/10/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP V4 - /source/scss/bootstrap/ 
@@ -10106,16 +10106,16 @@ code {
 }
 
 .main-content a:not(.btn) {
-  background-image: linear-gradient(#046B99, #046B99);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #046B99 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .main-content a:not(.btn):hover {
-  background-image: linear-gradient(#02374e, #02374e);
+  background-image: linear-gradient(to right, #02374e 50%, transparent 50%);
   text-decoration: none !important;
 }
 
