--- a/css/colorscheme-mono.css
+++ b/css/colorscheme-mono.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.4 -  12/27/2018 
+ * CA State Template v5 -  @version v5.0.4 -  1/10/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    MONO
@@ -454,16 +454,16 @@ h1 span[class^="ca-gov-icon-"]:first-child {
 }
 
 .panel-overstated .panel-body a:not(.btn) {
-  background-image: linear-gradient(#046B99, #046B99);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #046B99 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .panel-overstated .panel-body a:not(.btn):hover {
-  background-image: linear-gradient(#02374e, #02374e);
+  background-image: linear-gradient(to right, #02374e 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -630,16 +630,16 @@ h1 span[class^="ca-gov-icon-"]:first-child {
 }
 
 .panel-standout .panel-body a:not(.btn) {
-  background-image: linear-gradient(#046B99, #046B99);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #046B99 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .panel-standout .panel-body a:not(.btn):hover {
-  background-image: linear-gradient(#02374e, #02374e);
+  background-image: linear-gradient(to right, #02374e 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -732,16 +732,16 @@ figure {
 }
 
 .section-overstated a:not(.btn), .card-overstated a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-overstated a:not(.btn):hover, .card-overstated a:not(.btn):hover {
-  background-image: linear-gradient(#F4F3EF, #F4F3EF);
+  background-image: linear-gradient(to right, #F4F3EF 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -821,16 +821,16 @@ figure {
 }
 
 .section-standout a:not(.btn), .card-standout a:not(.btn) {
-  background-image: linear-gradient(#b3b2ac, #b3b2ac);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #b3b2ac 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-standout a:not(.btn):hover, .card-standout a:not(.btn):hover {
-  background-image: linear-gradient(#b1b1a4, #b1b1a4);
+  background-image: linear-gradient(to right, #b1b1a4 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -922,16 +922,16 @@ figure {
 }
 
 .section-impact a:not(.btn), .card-impact a:not(.btn) {
-  background-image: linear-gradient(#b3b2ac, #b3b2ac);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #b3b2ac 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-impact a:not(.btn):hover, .card-impact a:not(.btn):hover {
-  background-image: linear-gradient(#b1b1a4, #b1b1a4);
+  background-image: linear-gradient(to right, #b1b1a4 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1051,16 +1051,16 @@ figure {
 }
 
 .section-primary a:not(.btn), .card-primary a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-primary a:not(.btn):hover, .card-primary a:not(.btn):hover {
-  background-image: linear-gradient(#F4F3EF, #F4F3EF);
+  background-image: linear-gradient(to right, #F4F3EF 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1140,16 +1140,16 @@ figure {
 }
 
 .section-inverted a:not(.btn), .card-inverted a:not(.btn) {
-  background-image: linear-gradient(#b3b2ac, #b3b2ac);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #b3b2ac 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-inverted a:not(.btn):hover, .card-inverted a:not(.btn):hover {
-  background-image: linear-gradient(#a2a199, #a2a199);
+  background-image: linear-gradient(to right, #a2a199 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1229,16 +1229,16 @@ figure {
 }
 
 .section-danger a:not(.btn), .card-danger a:not(.btn) {
-  background-image: linear-gradient(#000, #000);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .section-danger a:not(.btn):hover, .card-danger a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1265,16 +1265,16 @@ figure {
 }
 
 .bg-highlight a:not(.btn) {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .bg-highlight a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1301,16 +1301,16 @@ figure {
 }
 
 .bg-primary a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .bg-primary a:not(.btn):hover {
-  background-image: linear-gradient(#F4F3EF, #F4F3EF);
+  background-image: linear-gradient(to right, #F4F3EF 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1337,32 +1337,32 @@ figure {
 }
 
 .bg-standout a:not(.btn) {
-  background-image: linear-gradient(#b3b2ac, #b3b2ac);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #b3b2ac 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .bg-standout a:not(.btn):hover {
-  background-image: linear-gradient(#b1b1a4, #b1b1a4);
+  background-image: linear-gradient(to right, #b1b1a4 50%, transparent 50%);
   text-decoration: none !important;
 }
 
 a.text-white:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 a.text-white:not(.btn):hover {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
@@ -1581,16 +1581,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-overstated a:not(.btn) {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-overstated a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1622,16 +1622,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-standout a:not(.btn) {
-  background-image: linear-gradient(#ffce2b, #ffce2b);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #ffce2b 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-standout a:not(.btn):hover {
-  background-image: linear-gradient(#fff, #fff);
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1663,16 +1663,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-primary a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-primary a:not(.btn):hover {
-  background-image: linear-gradient(#F4F3EF, #F4F3EF);
+  background-image: linear-gradient(to right, #F4F3EF 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1704,16 +1704,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-highlight a:not(.btn) {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-highlight a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1745,16 +1745,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-inverted a:not(.btn) {
-  background-image: linear-gradient(#ffce2b, #ffce2b);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #ffce2b 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-inverted a:not(.btn):hover {
-  background-image: linear-gradient(#fff, #fff);
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1786,16 +1786,16 @@ a.text-white:not(.btn):hover {
 }
 
 .testimonial-danger a:not(.btn) {
-  background-image: linear-gradient(#000, #000);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .testimonial-danger a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1848,16 +1848,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-primary a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-primary a:not(.btn):hover {
-  background-image: linear-gradient(#F4F3EF, #F4F3EF);
+  background-image: linear-gradient(to right, #F4F3EF 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -1980,16 +1980,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-inverted a:not(.btn), .card-inverse a:not(.btn) {
-  background-image: linear-gradient(#b3b2ac, #b3b2ac);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #b3b2ac 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-inverted a:not(.btn):hover, .card-inverse a:not(.btn):hover {
-  background-image: linear-gradient(#a2a199, #a2a199);
+  background-image: linear-gradient(to right, #a2a199 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -2028,16 +2028,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-success a:not(.btn) {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-success a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -2076,16 +2076,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-info a:not(.btn) {
-  background-image: linear-gradient(#fff, #fff);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-info a:not(.btn):hover {
-  background-image: linear-gradient(#fff, #fff);
+  background-image: linear-gradient(to right, #fff 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -2124,16 +2124,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-warning a:not(.btn) {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-warning a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -2172,16 +2172,16 @@ a.text-white:not(.btn):hover {
 }
 
 .card-danger a:not(.btn) {
-  background-image: linear-gradient(#000, #000);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .card-danger a:not(.btn):hover {
-  background-image: linear-gradient(#000, #000);
+  background-image: linear-gradient(to right, #000 50%, transparent 50%);
   text-decoration: none !important;
 }
 
@@ -2563,18 +2563,18 @@ input[type="radio"]:checked + * i {
 }
 
 .main-content a.color-gray-dark {
-  background-image: linear-gradient(#333333, #333333);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #333333 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
 }
 
 .main-content a.color-primary-hover:hover {
-  background-image: linear-gradient(#545351, #545351);
-  background-repeat: no-repeat;
-  background-size: 100% 1px;
+  background-image: linear-gradient(to right, #545351 50%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 2px 1px;
   background-position: center bottom 4%;
   background-origin: padding-box;
   text-decoration: none !important;
