--- a/source/scss/cagov.core.scss
+++ b/source/scss/cagov.core.scss
@@ -29,8 +29,8 @@
 @import "bootstrap/card";
 @import "bootstrap/breadcrumb";
 @import "bootstrap/pagination";
-// @import "bootstrap/badge";
-// @import "bootstrap/jumbotron";
+@import "bootstrap/badge";
+@import "bootstrap/jumbotron";
 @import "bootstrap/alert";
 @import "bootstrap/progress";
 @import "bootstrap/media";
@@ -38,10 +38,10 @@
 @import "bootstrap/close";
 @import "bootstrap/modal";
 @import "bootstrap/tooltip";
-// @import "bootstrap/popover";
+@import "bootstrap/popover";
 // @import "bootstrap/carousel"; // State template is using Third Party Owl Carousel plugin
 @import "bootstrap/utilities";
-// @import "bootstrap/print";
+@import "bootstrap/print";
 
 
 // State Template Variables
