Fixed search icon position

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,8 +1,8 @@
 /**
- * CA State Template v5 -  @version v5.0.5 -  2/25/2019 
+ * CA State Template v5 -  @version v5.0.5 -  2/26/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
-   BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
+   BOOTSTRAP V4 - /source/scss/bootstrap/ 
    https://getbootstrap.com/
 ----------------------------------------- */
 :root {
@@ -12145,12 +12145,8 @@ td.gsc-search-button::before {
   color: #666;
   position: absolute;
   font-size: 2.5rem;
-  top: -2px;
   right: 10px;
-}
-
-.active td.gsc-search-button::before {
-  top: 8px;
+  line-height: .01rem;
 }
 
 button.gsc-search-button {
