--- a/source/scss/cagov/search.scss
+++ b/source/scss/cagov/search.scss
@@ -507,13 +507,9 @@ td.gsc-search-button {
         color: #666;
         position: absolute;
         font-size: 2.5rem;
-        top: -2px;
         right: 10px;
+        line-height: .01rem;
     }
-}
-
-.active td.gsc-search-button::before {
-    top: 8px;
 }
 
 button.gsc-search-button {
