--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.2 -  2/21/2019 
+ * CA State Template v5.5 -  @version v5.5.2 -  2/26/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -12104,12 +12104,8 @@ td.gsc-search-button::before {
   color: #666;
   position: absolute;
   font-size: 2.5rem;
-  top: -2px;
   right: 10px;
-}
-
-.active td.gsc-search-button::before {
-  top: 8px;
+  line-height: 0.01rem;
 }
 
 button.gsc-search-button {
