Small navigation fixes

--- a/source/scss/cagov/navigation.scss
+++ b/source/scss/cagov/navigation.scss
@@ -99,7 +99,7 @@
 
 .first-level-link {
     display: block;
-    padding: 5px 5px 12px 5px;
+    padding: 5px 0 12px 0;
     font-family: $headings-font-family;
     font-weight: 400;
     white-space: nowrap;
