--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.2 -  2/26/2019 
+ * CA State Template v5.5 -  @version v5.5.2 -  3/5/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -11464,6 +11464,10 @@ code {
   padding-top: 119px;
 }
 
+.fixed .main-content {
+  padding-top: 119px;
+}
+
 .fixed.nav-full-width-icons + .main-content {
   padding-top: 145px;
 }
@@ -11498,7 +11502,8 @@ code {
     min-height: 55px;
   }
   .fixed.compact .top-level-nav .first-level-link {
-    padding: 17px 0 8px 0;
+    padding-top: 17px;
+    padding-bottom: 8px;
   }
 }
 
@@ -12453,7 +12458,7 @@ table.gsc-search-box td {
 
 .first-level-link {
   display: block;
-  padding: 5px 5px 12px 5px;
+  padding: 5px 0 12px 0;
   font-family: "Asap Condensed", sans-serif;
   font-weight: 400;
   white-space: nowrap;
