--- a/source/scss/cagov/fixed-header.scss
+++ b/source/scss/cagov/fixed-header.scss
@@ -46,6 +46,10 @@
     padding-top: 119px; // Padding for fixed header
 }
 
+.fixed .main-content {
+    padding-top: 119px; // Padding for fixed header
+}
+
 .fixed.nav-full-width-icons + .main-content {
     padding-top: 145px; // Padding for full width nav with fixed header 
 }
@@ -66,16 +70,16 @@
 
 @media (min-width: $screen-sm-min) {
     .fixed.compact {
+        // .search-container {
+        //   top: 51px;
+        // }
+        // covering edge case  where no links are set. Need this to maintain
+        // search box and ask group positioning
+        .main-navigation {
+            margin-top: -55px; // Beta 6.0 addition
+            min-height: 55px; // Beta 6.0 addition
+        }
 
-      // .search-container {
-      //   top: 51px;
-      // }
-      // covering edge case  where no links are set. Need this to maintain
-      // search box and ask group positioning
-      .main-navigation {
-		margin-top: -55px;	 // Beta 6.0 addition	
-		min-height: 55px;	// Beta 6.0 addition
-      }
         .first-level-link [class^="ca-gov-icon-"] {
             display: none;
         }
@@ -85,21 +89,21 @@
         }
 
         .header-organization-banner {
-			height: 55px;	// Beta 5.0 addition	
+            height: 55px; // Beta 5.0 addition
             max-height: 45px; // Beta 5.0 addition
-			line-height: 55px;	// Beta 5.0 addition	
-
+            line-height: 55px; // Beta 5.0 addition
             a {
-				max-width: 225px; // Beta 5.0 addition
+                max-width: 225px; // Beta 5.0 addition
             }
         }
-		
-		.top-level-nav { // Beta 5.0 addition	
-			min-height: 55px; // Beta 6.0 addition 
-			.first-level-link {
-				padding: 17px 0 8px 0;
-				}
-			}
+
+        .top-level-nav { // Beta 5.0 addition
+            min-height: 55px; // Beta 6.0 addition
+            .first-level-link {
+                padding-top: 17px;
+                padding-bottom: 8px;
+            }
+        }
     }
 
 }
