--- a/source/scss/cagov/navigation.scss
+++ b/source/scss/cagov/navigation.scss
@@ -6,28 +6,29 @@
 // MIXINS - MENU ONLY
 // --------------------------------------------------
 
-@mixin nav-columns($count: 3){
-  -moz-column-count: $count;
-  -ms-column-count: $count;
-  -webkit-column-count: $count;
-  -moz-column-gap: 0;
-  -ms-column-gap: 0;
-  -webkit-column-gap: 0;
-   -webkit-column-count: $count;
-   -moz-column-count: $count;
-  column-count: $count;
-  -webkit-column-gap: 0;
-  -moz-column-gap: 0;
-  column-gap: 0;
+@mixin nav-columns($count: 3) {
+    -moz-column-count: $count;
+    -ms-column-count: $count;
+    -webkit-column-count: $count;
+    -moz-column-gap: 0;
+    -ms-column-gap: 0;
+    -webkit-column-gap: 0;
+    -webkit-column-count: $count;
+    -moz-column-count: $count;
+    column-count: $count;
+    -webkit-column-gap: 0;
+    -moz-column-gap: 0;
+    column-gap: 0;
 }
-@mixin nav-column-group(){
-  -webkit-column-break-inside: avoid; /* for Safari, Chrome, Opera */
-  page-break-inside: avoid; /* for Firefox */
-  break-inside: avoid; /* for IE 10+ */
+
+@mixin nav-column-group() {
+    -webkit-column-break-inside: avoid; /* for Safari, Chrome, Opera */
+    page-break-inside: avoid; /* for Firefox */
+    break-inside: avoid; /* for IE 10+ */
 }
 
 .navigation-search {
-    border:none;
+    border: none;
     position: relative;
 }
 
@@ -38,9 +39,9 @@
 
 .main-navigation {
     @include container();
-    position:relative;
-    margin-top:-82px;
-    padding-left:80px;
+    position: relative;
+    margin-top: -82px;
+    padding-left: 80px;
 }
 
 .top-level-nav {
@@ -70,27 +71,27 @@
 }
 
 .second-level-nav {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
- [class^="unit"] {
-    .second-level-link {
-      display: block;
+    [class^="unit"] {
+        .second-level-link {
+            display: block;
+        }
     }
-  }
 }
 
-@media (max-width: $screen-xs-max) {		
-.second-level-nav > li {		
-    border-right: 0px;
-		}	
+@media (max-width: $screen-xs-max) {
+    .second-level-nav > li {
+        border-right: 0px;
+    }
 
-#navigation {
-     clear: both;
-	 width:100%;
-    }			
-}	
+    #navigation {
+        clear: both;
+        width: 100%;
+    }
+}
 
 
 //
@@ -99,12 +100,12 @@
 
 .first-level-link {
     display: block;
-    padding: 5px 0 12px 0;
+    padding: 5px 5px 12px 5px;
     font-family: $headings-font-family;
     font-weight: 400;
     white-space: nowrap;
-    position: relative; 
-    z-index: 1; 
+    position: relative;
+    z-index: 1;
 
     &:hover, &:focus {
         text-decoration: none;
@@ -129,268 +130,269 @@
     }
 }
 
+@media (max-width: $screen-md) and (min-width: $screen-sm-min) {
+    .first-level-link {
+        padding: 5px 3px 12px 3px;
+    }
+}
 
 //
 // TOP LEVEL NAVIGATION FOR DESKTOP
 // --------------------------------------------------
 @media (min-width: $screen-sm-min) {
-  .main-navigation {
-    z-index: 25;
-    // handle the edge case when their is no nav links
-    min-height:85px; // beta 6.0 addition
-	padding-left: 350px;  // beta 5.0 addition
-  }
-  .top-level-nav {
-    display: table;                               // Use table and table-cell method to space top level navigation items
-    table-layout: auto;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    width: 100%;
-	min-height: 80px; // beta 6.0 addition
-	
-   .nav-item {
-      padding: 0;
-      margin-top: 0;
-      background: none;
-      width: auto;
-      display: table-cell;
+    .main-navigation {
+        z-index: 25;
+        // handle the edge case when their is no nav links
+        min-height: 85px; // beta 6.0 addition
+        padding-left: 350px; // beta 5.0 addition
+    }
 
-      display: block;
-      -webkit-box-flex: 1;
-      -moz-box-flex: 1;
-      -webkit-flex: 1 1 auto;
-      -ms-flex: 1 1 auto;
-      flex: 1 1 auto;
+    .top-level-nav {
+        display: table; // Use table and table-cell method to space top level navigation items
+        table-layout: auto;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        width: 100%;
+        min-height: 80px; // beta 6.0 addition
+        .nav-item {
+            padding: 0;
+            margin-top: 0;
+            background: none;
+            width: auto;
+            display: table-cell;
+            display: block;
+            -webkit-box-flex: 1;
+            -moz-box-flex: 1;
+            -webkit-flex: 1 1 auto;
+            -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
 
-      .noflex &, .oldie & {
-        display: table-cell;
-      }
-
-            .sub-nav {
-                top: 100%;  // Positioning for flexbox layout
-				box-shadow: 0px 8px 7px 0px rgba(0,0,0,0.06) // beta 6.0 addition
+            .noflex &, .oldie & {
+                display: table-cell;
             }
 
-      > a {
-        text-align: center;                         // Center only top level navigation links
-		min-height:50px; // beta 5.0 addition
-      }
+            .sub-nav {
+                top: 100%; // Positioning for flexbox layout
+                box-shadow: 0px 8px 7px 0px rgba(0,0,0,0.06) // beta 6.0 addition
+            }
+
+            > a {
+                text-align: center; // Center only top level navigation links
+                min-height: 50px; // beta 5.0 addition
+            }
+        }
+        // beta 5.0 addition
+        .main-navigation.dropdown .nav-arrow-down {
+            left: auto;
+            margin-left: auto;
+        }
     }
-	
-	// beta 5.0 addition
-	.main-navigation.dropdown .nav-arrow-down {		
-    left: auto;		
-    margin-left: auto; 		
-	}
-	
-  }
 
 
-	
 
 
-  // shared styles megamenu and dropdown menu
-  .nav-item {
-    .sub-nav {
-      position: absolute;
+
+    // shared styles megamenu and dropdown menu
+    .nav-item {
+        .sub-nav {
+            position: absolute;
+        }
     }
-  }
-  /* sub-navigation panel open state */
-  .main-navigation.dropdown .dropdown,
-  .no-js .main-navigation.dropdown,
-  .no-js .main-navigation.megadropdown {
-    .nav-item:hover .sub-nav {
-      display: block;
-      .touch & {
-        display: none;
-      }
+    /* sub-navigation panel open state */
+    .main-navigation.dropdown .dropdown,
+    .no-js .main-navigation.dropdown,
+    .no-js .main-navigation.megadropdown {
+        .nav-item:hover .sub-nav {
+            display: block;
+
+            .touch & {
+                display: none;
+            }
+        }
     }
-  }
 }
 
 
 // beta 5.0 addition
-.main-navigation.dropdown .sub-nav {	 	
-	max-width:250px;		
-	min-width:250px;		
-	left: initial;		
-    right: initial;	
-	
-	@media (max-width: $screen-xs-max) {
-		max-width:100%;
-	}
-}	
+.main-navigation.dropdown .sub-nav {
+    max-width: 250px;
+    min-width: 250px;
+    left: initial;
+    right: initial;
 
- // beta 5.0 addition	
-.main-navigation.dropdown .nav-arrow-down {		
-	width: 100%;			
+    @media (max-width: $screen-xs-max) {
+        max-width: 100%;
+    }
 }
 
-@media (min-width: $screen-md) {	// Beta 5.0 addition	
-    .main-navigation {		
-    padding-left: 350px;		
-}		
+// beta 5.0 addition
+.main-navigation.dropdown .nav-arrow-down {
+    width: 100%;
+}
+
+@media (min-width: $screen-md) { // Beta 5.0 addition
+    .main-navigation {
+        padding-left: 350px;
+    }
 }
 
 
-@media (max-width: $screen-md) and (min-width: $screen-sm-min) {	// Beta 5.0 addition
+@media (max-width: $screen-md) and (min-width: $screen-sm-min) { // Beta 5.0 addition
     .main-navigation {
         padding-left: 250px;
+
         .top-level-nav {
             .nav-item { // equivalent to .nav-item
                 @include font-size(0.9);
             }
         }
-    }		
+    }
 }
 
-@media (min-width: $screen-lg) {		
-    .main-navigation {		
-    padding-left: 350px;		
-}		
+@media (min-width: $screen-lg) {
+    .main-navigation {
+        padding-left: 350px;
+    }
 }
 
 
 // Second-level-link toggle button
 .nav-item .toggle-sub-nav {
-  &.closed .ca-gov-icon-menu-toggle-open {
-    display: none;
-  }
-  &.open .ca-gov-icon-menu-toggle-closed {
-    display: none;
-  }
-  @media (min-width: $screen-sm-min) {
-    display: none;                                      // Hide menu dropdown button from desktop view
-  }
+    &.closed .ca-gov-icon-menu-toggle-open {
+        display: none;
+    }
+
+    &.open .ca-gov-icon-menu-toggle-closed {
+        display: none;
+    }
+
+    @media (min-width: $screen-sm-min) {
+        display: none; // Hide menu dropdown button from desktop view
+    }
 }
 
 @media (max-width: $screen-xs-max) {
-  // For standard mobile menu
-  .mobile-closed {
-    max-height: 0;
-  }
-  
- .subnav-closed {
-    max-height: 0;
-    overflow-y: hidden;
-  }
-
-  // For standard mobile menu and off canvas menu
-  .top-level-nav .nav-item {
-    background-color:$white;
-    margin-top: 0;
-
-    .first-level-link.has-sub {
-      padding-right: 82px; // allow room for sub nav toggle arrow
+    // For standard mobile menu
+    .mobile-closed {
+        max-height: 0;
     }
-	// Sub nav transition
-	.sub-nav {
-	display:block;
-    -webkit-transition: max-height 0.5s ease-in-out;
-    -moz-transition: max-height 0.5s ease-in-out;
-    -o-transition: max-height 0.5s ease-in-out;
-    transition: max-height 0.5s ease-in-out;
-    border-left:none; border-right:none;
-	
-   }
 
-	
-}
-
-  .nav-item .sub-nav.secondary-open {
-    display: block;
-  }
-
-  .nav-item.focus .sub-nav {
-    display: block;
-  }
-
-  .nav-item.focus:active .sub-nav,
-  .nav-item.focus.clickedFocus .sub-nav {
-    display: none;
-  }
-
-  // For off canvas menu
-  .oc-outer { //Dynamically added wrapper div
-    position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-
-    // Prevent scrolling of content when menu is open
-    &.scroll-menu-only.oc-menu-open {
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      overflow: hidden;
+    .subnav-closed {
+        max-height: 0;
+        overflow-y: hidden;
     }
-  }
 
-  .oc-inner { // Dynamically added wrapper div
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    margin-left: 0;
+    // For standard mobile menu and off canvas menu
+    .top-level-nav .nav-item {
+        background-color: $white;
+        margin-top: 0;
 
-    -webkit-transition: margin-left 0.5s ease;
-      -moz-transition: margin-left 0.5s ease;
-      -o-transition: margin-left 0.5s ease;
-      transition: margin-left 0.5s ease;
-
-    .oc-menu-open & {
-      margin-left: 70%;
+        .first-level-link.has-sub {
+            padding-right: 82px; // allow room for sub nav toggle arrow
+        }
+        // Sub nav transition
+        .sub-nav {
+            display: block;
+            -webkit-transition: max-height 0.5s ease-in-out;
+            -moz-transition: max-height 0.5s ease-in-out;
+            -o-transition: max-height 0.5s ease-in-out;
+            transition: max-height 0.5s ease-in-out;
+            border-left: none;
+            border-right: none;
+        }
     }
-  }
 
-  .global-header .navigation-search.oc-menu {
-    position: absolute;
-    width: 70%;
-    //height: 100%;
-    left: -70%;
-    top: 0;
-	-webkit-transition: left 0.5s ease;
-    transition: left 0.5s ease;
+    .nav-item .sub-nav.secondary-open {
+        display: block;
+    }
 
-    overflow-y: auto;  // allow menu to scroll if dynamic height reaches beyond page height
-    overflow-x: hidden;
-  }
+    .nav-item.focus .sub-nav {
+        display: block;
+    }
 
-  // .header-decoration is placed on top of regular page, produces dropshadow, prevents clicks on main page, and when clicked closes the menu.
+    .nav-item.focus:active .sub-nav,
+    .nav-item.focus.clickedFocus .sub-nav {
+        display: none;
+    }
 
-  .header-decoration {
-    display: none;                                  // hide in mobile view by default
-  }
+    // For off canvas menu
+    .oc-outer { //Dynamically added wrapper div
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        // Prevent scrolling of content when menu is open
+        &.scroll-menu-only.oc-menu-open {
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            overflow: hidden;
+        }
+    }
 
-  .oc-outer .header-decoration {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    height: auto;
-    width: 100%;
-    background: none;
-    -webkit-box-shadow: -6px -1px 30px 0px rgba(5, 5, 5, .5);
-    -moz-box-shadow:    -6px -1px 30px 0px rgba(5, 5, 5, .5);
-    box-shadow:         -6px -1px 30px 0px rgba(5, 5, 5, .5);
-    cursor: alias;
-  }
+    .oc-inner { // Dynamically added wrapper div
+        position: relative;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        margin-left: 0;
+        -webkit-transition: margin-left 0.5s ease;
+        -moz-transition: margin-left 0.5s ease;
+        -o-transition: margin-left 0.5s ease;
+        transition: margin-left 0.5s ease;
 
-  .oc-outer.oc-menu-open .header-decoration {
-    display: block;
-  }
+        .oc-menu-open & {
+            margin-left: 70%;
+        }
+    }
 
-  .navigation-search.oc-menu {
-    padding-top: 60px;
-  }
+    .global-header .navigation-search.oc-menu {
+        position: absolute;
+        width: 70%;
+        //height: 100%;
+        left: -70%;
+        top: 0;
+        -webkit-transition: left 0.5s ease;
+        transition: left 0.5s ease;
+        overflow-y: auto; // allow menu to scroll if dynamic height reaches beyond page height
+        overflow-x: hidden;
+    }
 
-  .oc-menu .mobile-control.toggle-search {
-    display: none;
-  }
+    // .header-decoration is placed on top of regular page, produces dropshadow, prevents clicks on main page, and when clicked closes the menu.
+
+    .header-decoration {
+        display: none; // hide in mobile view by default
+    }
+
+    .oc-outer .header-decoration {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        height: auto;
+        width: 100%;
+        background: none;
+        -webkit-box-shadow: -6px -1px 30px 0px rgba(5, 5, 5, .5);
+        -moz-box-shadow: -6px -1px 30px 0px rgba(5, 5, 5, .5);
+        box-shadow: -6px -1px 30px 0px rgba(5, 5, 5, .5);
+        cursor: alias;
+    }
+
+    .oc-outer.oc-menu-open .header-decoration {
+        display: block;
+    }
+
+    .navigation-search.oc-menu {
+        padding-top: 60px;
+    }
+
+    .oc-menu .mobile-control.toggle-search {
+        display: none;
+    }
 
 
     .oc-menu .mobile-control.cagov-logo {
@@ -410,10 +412,10 @@
     .home-link {
         @include sr-only();
     }
-	
-	.fixed.top-level-nav .nav-item {	 // beta 5.0 addition	
-    min-height: 50px;
-	}
+
+    .fixed.top-level-nav .nav-item { // beta 5.0 addition
+        min-height: 50px;
+    }
 }
 
 /* Need a little extra specificity for IE to override display: table-cell */
