Made custom search box accessible. Added globals.scss styles to core css.

--- a/source/scss/cagov.core.scss
+++ b/source/scss/cagov.core.scss
@@ -153,6 +153,7 @@
 @import "cagov/charts.scss";
 @import "cagov/filter-group.scss";
 @import "cagov/pills.scss";
+@import "cagov/globals.scss";
 
 
 //
