Fixed flex utility header ca.gov link focus placement

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -13816,22 +13816,26 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 .utility-header .flex-row .social-media-links .header-cagov-logo {
-  margin-right: 40px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .utility-header .flex-row .social-media-links .header-cagov-logo img {
   top: 4px;
+  left: 0;
 }
 
 @media (min-width: 767px) and (max-width: 991px) {
   .utility-header .flex-row .social-media-links .header-cagov-logo {
-    margin-right: 20px;
+    margin-right: 15px;
+    margin-left: 15px;
   }
 }
 
 @media (max-width: 767px) {
   .utility-header .flex-row .social-media-links .header-cagov-logo {
     margin-right: 15px;
+    margin-left: 15px;
   }
 }
 
