--- a/source/scss/cagov/utility-header.scss
+++ b/source/scss/cagov/utility-header.scss
@@ -268,18 +268,22 @@
             justify-content: flex-start;
 
             .header-cagov-logo {
-                margin-right: 40px;
+                margin-right: 20px;
+                margin-left: 20px;
 
                 img {
                     top: 4px;
+                    left: 0;
                 }
 
                 @media (min-width: $screen-xs-max) and (max-width: $screen-sm-max) {
-                    margin-right: 20px;
+                    margin-right: 15px;
+                    margin-left: 15px;
                 }
 
                 @media (max-width: $screen-xs-max) {
                     margin-right: 15px;
+                    margin-left: 15px;
                 }
 
                 a {
